--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,11 @@
   <a routerLink="login">Login</a>
 
 </nav>
-
-<router-outlet></router-outlet> -->
+-->
+<router-outlet></router-outlet>
 
 <!-- <app-form-RDF></app-form-RDF> -->
 <!-- <app-form></app-form> -->
 <!-- <app-choose></app-choose> -->
-<app-AAAAAA></app-AAAAAA>
+<!-- <app-AAAAAA></app-AAAAAA> -->
 <!-- <app-country></app-country> -->
